# English-to-Hindi-Translation-Software

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: deploy.yml
Notebooks/: finetuned_opus_iitb_english_hindi.ipynb  finetuned_opus_iitb_english_hindi1.ipynb
data/: eng_hind.csv
deployment/: app.py  requirements.txt
model/best_helsinki_model/: config.json  generation_config.json
src/: api.py  models.py  translator.py
static/: index.html
static/css/: style.css
static/js/: app.js
