[project]
name = "EngHind-Public-Notice-Translation-Software"
version = "0.1.0"
requires-python = "==3.12"
dependencies = [
    "transformers[sentencepiece]",
    "fastapi[standard]",
    "uvicorn[standard]",
    "pandas",
    "numpy",
    "matplotlib",
    "optuna",
    "ipykernel",
    "jupyter",
    "torch",
    "torchvision",
    "torchaudio",
    "sacrebleu",
]

[tool.uv]
link-mode = "copy"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]
